# JSLabs/LAB9/routers/router4.js
@@ -4,11 +4,15 @@ const bp = require('body-parser')
 
 
 const {
+    getModles,
+    getModlesById,
     getNewAPI
 } = require('../controllers/dbCallV3.js')
 
 v4_router
     .post('/newUser', getNewAPI)
+    .get('/models', getModles)
+    .get('/models/:id', getModlesById)
     .use(bp.json())
     .use(bp.urlencoded({ extended: true }))
 
